--- a/style.css
+++ b/style.css
@@ -36,13 +36,14 @@ div.dokuwiki .subjectindex {
     border-width: 0;
     font-size: 80%;
     margin: 0;
+    overflow: hidden;
     padding: 4px;
     position: relative;
     text-align: left;
     width: 100%;
 }
-div.dokuwki .subectindex.border {
-    border: 1px;
+div.dokuwiki .subjectindex.border {
+    border-width: 1px;
 }
 
 div.dokuwiki .subjectindex .inner {
@@ -111,6 +112,7 @@ div.dokuwiki .subjectindex h1.title {
     border-radius: 0;
     -moz-border-radius:0;
     -webkit-border-radius:0;
+    color: #A0A0A0;
     font-size:132%;
     margin-bottom: 6px;
 }
